--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%; */
-    --background: 0 0% 100%;
+    /* --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
@@ -49,7 +49,6 @@
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
     --radius: 0.5rem;
-    --header: 3.5rem;
     --color-1: 0 100% 63%;
     --color-2: 270 100% 63%;
     --color-3: 210 100% 63%;
@@ -62,7 +61,7 @@
     --sidebar-accent: 240 4.8% 95.9%;
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
+    --sidebar-ring: 217.2 91.2% 59.8%; */
     --ease-spring-3: linear(
       0,
       0.009,
@@ -90,6 +89,52 @@
       1
     );
     --ease-3: cubic-bezier(0.25, 0, 0.3, 1);
+    --header: 3.5rem;
+
+    --background: 0 0% 100%;
+    --background-70: 210 2% 75%;
+    --background-80: 0 11% 95%;
+    --background-90: 210 2% 75%;
+    --background-25: 220 7% 8% 0.25;
+    --background-20: 0 11% 95%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-10: 0 0% 98%;
+    --primary-20: 0 11% 95% 1;
+    --primary-80: 0 11% 95%;
+    --primary-90: 0 0% 100% 1;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 220 3% 35%;
+    --secondary-90: 228 7% 14%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 10% 3.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
+    --creative-ai-gradient: linear-gradient(180deg, #f55c7a 0%, #f6bc66 100%);
   }
   .dark {
     /* --background: 229 41% 4%;
@@ -110,7 +155,7 @@
     --accent-foreground: 229 23% 77%;
     --destructive: 3 89% 54%;
     --destructive-foreground: 0 0% 100%; */
-    --background: 240 10% 3.9%;
+    /* --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
     --card: 240 10% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -130,6 +175,49 @@
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
     --ring: 229 100% 62%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%; */
+    --background: 240 10% 3.9%;
+    --background-primary: 220 7% 8%;
+    --background-90: 210 2% 75%;
+    --background-80: 228 7% 14%;
+    --background-70: 220 3% 35%;
+    --background-25: 0 8% 95% 0.25;
+    --background-20: 220 7% 17%;
+    --foreground: 0 0% 98%;
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 11% 95%;
+    --primary-10: 228 7% 14%;
+    --primary-20: 220 7% 17%;
+    --primary-80: 228 7% 14%;
+    --primary-90: 225 7% 11%;
+    --primary-foreground: 240 5.9% 10%;
+    --secondary: 225 2% 63%;
+    --secondary-90: 210 2% 75%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
@@ -235,9 +323,8 @@
           opacity 0.3s var(--ease-3);
       }
 
-      &:has(> li:hover) > li:not(:hover),
-      &:has(> li:focus-within) > li:not(:focus-within) {
-        opacity: 0.5;
+      &:has(> li:hover) > li:not(:hover) {
+        opacity: 0.7;
         transform: scale(0.9);
       }
     }
